--- a/conf/netatalk-afp.conf
+++ b/conf/netatalk-afp.conf
@@ -7,12 +7,12 @@
 ; Global server settings
 mimic model = TimeCapsule6,106
 
-[rpi.local ~/]
+[home]
 path = /home/dereck
 valid users = dereck
 time machine = no
 
-[rpi.local /media/nvme0]
+[nvme0]
 path = /media/nvme0
 valid users = dereck
 time machine = no
