--- a/vscode-server/docker-compose.yml
+++ b/vscode-server/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - TZ=Etc/UTC
       - PASSWORD=${CODE_SERVER_PASSWORD}  # Secure access password
     volumes:
-      - /media/nvme0/vscode-server:/config
+      - /media/nvme0/vscode-server:/home/dereck
     ports:
       - '8443:8443'
     restart: unless-stopped
