Minimal version with env vars and vol.

--- a/vscode-server/Dockerfile
+++ b/vscode-server/Dockerfile
@@ -1,6 +1,9 @@
 # Use the latest Ubuntu LTS as the base image
 FROM ubuntu:22.04
 
+# Argument for username (passed from docker-compose.yml)
+ARG USERNAME
+
 # Set the working directory
 WORKDIR /workspace
 
@@ -12,7 +15,18 @@ RUN apt-get update && \
     wget \
     git \
     vim \
+    sudo \
     && rm -rf /var/lib/apt/lists/*
+
+# Create a user with the provided username only if it does not already exist
+RUN if ! id -u ${USERNAME} >/dev/null 2>&1; then \
+        useradd -m -s /bin/bash ${USERNAME} && \
+        echo "${USERNAME} ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/${USERNAME}; \
+    fi
+
+# Switch to the user by default
+USER ${USERNAME}
+WORKDIR /home/${USERNAME}
 
 # Set the default command to run when the container starts
 CMD ["/bin/bash"]
