--- a/vscode-server/docker-compose.yml
+++ b/vscode-server/docker-compose.yml
@@ -15,6 +15,6 @@ services:
     ports:
       - "${PORT}:${PORT}"
     volumes:
-      - ${HOST_VOLUME}:/home/${USERNAME}
+      - ${HOST_VOLUME}:/home/${USERNAME}:rw
     restart: unless-stopped
     tty: true
